<resources>
    <string name="app_name">Rozkład Jazdy</string>
    <string name="rozk_ad_jazdy">Rozkład Jazdy</string>
    <string name="wyszukaj">Wyszukaj</string>
    <string name="rozk_ad">Rozkład</string>
    <string name="ulubione">Ulubione</string>
    <string name="planer">Planer</string>
    <string name="nav_open">Open navigation drawer</string>
    <string name="nav_close">Close navigation drawer</string>
    <string name="ikona_planera">Ikona planera</string>
    <string name="ikona_rozk_adu">Ikona rozkładu</string>
    <string name="ikona_ulubione">Ikona ulubione</string>
    <string name="ikona_wyszukiwania">Ikona wyszukiwania</string>
    <string name="wybierz_motyw">Wybierz motyw:</string>
    <string name="motyw_fioletowy">Motyw fioletowy</string>
    <string name="motyw_zielony">Motyw zielony</string>
    <string name="motyw_niebieski">Motyw niebieski (domyślny)</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="stacja_pocz_tkowa">Stacja początkowa</string>
    <string name="stacja_ko_cowa">Stacja końcowa</string>
    <string name="data_i_godzina">Data</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="godzina">Godzina</string>
    <string name="logo_aplikacji">Logo aplikacji</string>
    <string name="home">Home</string>
    <string name="mapa_aglomeracji">Mapa aglomeracji</string>
    <string name="informacje">Informacje</string>
    <string name="polityka_prywatno_ci">Polityka prywatności</string>
    <string name="typ">typ:</string>
    <string name="nazwa_pociagu">Nazwa pociagu:</string>
    <string name="peron">peron:</string>
    <string name="stacje_posrednie">stacje posrednie:</string>
    <string name="numer">numer</string>
    <string name="nazwa">nazwa</string>
    <string name="numer2">numer:</string>
    <string name="nazwa2">nazwa:</string>
    <string name="wybierz_stacj">Wybierz stację:</string>
    <string name="Tytuł">tytul</string>
    <string name="komentarz">komentarz</string>
    <string name="dodaj_plan">Dodaj plan</string>
    <string name="wyszukaj_po_czenie">WYSZUKAJ POŁĄCZENIE</string>
    <string name="usu_plan">Usuń plan</string>
</resources>