<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blueb"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:navigationIcon="?attr/actionModeCloseDrawable" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/toolbar_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/themeLayoutA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonThemeA"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/motyw_niebieski" />

            <TextView
                android:id="@+id/colorDotTextViewA"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:background="@color/blueb"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/themeLayoutB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonThemeB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:layout_weight="1"
                android:text="@string/motyw_zielony" />

            <TextView
                android:id="@+id/colorDotTextViewB"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:background="@color/light_green"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/themeLayoutC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonThemeC"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onRadioButtonClicked"
                android:text="@string/motyw_fioletowy" />

            <TextView
                android:id="@+id/colorDotTextViewC"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:background="@color/purple"
                android:textSize="16sp" />

        </LinearLayout>

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
