<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ScreenBackground">

    <ScrollView

        android:id="@+id/scrollView5"
        style="@style/ScreenBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

    </ScrollView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAddNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/icons8_back_48"
        app:title="Dodaj Plan"
        app:titleTextColor="@color/white" >

        <ImageButton
            android:id="@+id/saveNoteBtn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="?attr/colorPrimary"
            android:src="@drawable/baseline_done_24_white"
            tools:ignore="SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="174dp"
            android:layout_gravity="right"
            tools:layout_editor_absoluteY="16dp" />
    </androidx.appcompat.widget.Toolbar>


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/wave_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarAddNotes">

    </RelativeLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="348dp"
        android:layout_height="358dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:elevation="25dp"
        android:fadingEdgeLength="10dp"
        app:cardBackgroundColor="?attr/colorButtonNormal"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="ExtraText">

            <Button
                android:id="@+id/button_search_planner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/button_background"
                android:text="@string/wyszukaj_po_czenie"
                android:textColor="@color/white"
                android:textColorLink="@color/white"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/tytul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:autofillHints=""
                android:background="@drawable/edit_text_background"
                android:drawablePadding="10dp"
                android:hint="@string/Tytuł"
                android:padding="12dp"
                android:popupBackground="@color/shadow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/komentarz"
                android:layout_width="295dp"
                android:layout_height="171dp"
                android:layout_above="@+id/button_search_planner"
                android:layout_below="@+id/tytul"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="21dp"
                android:autofillHints=""
                android:background="@drawable/edit_text_background"
                android:drawablePadding="10dp"
                android:hint="@string/komentarz"
                android:padding="12dp"
                android:popupBackground="@color/shadow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/relativeLayout9"
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:background="@drawable/wave_floor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textDelete"
            android:layout_width="136dp"
            android:layout_height="47dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="125dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="125dp"
            android:layout_marginBottom="38dp"
            android:gravity="center"
            android:text="Usun Plan"
            android:textStyle="bold"
            android:visibility="visible" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>